--- a/flask_apps/templates/predict.html
+++ b/flask_apps/templates/predict.html
@@ -3,20 +3,56 @@
 <head>
     <title>Brain Tumor Image Prediction</title>
     <style>
-        * {
-            font-size: 30px;
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            text-align: center;
         }
+
+        /* Style the heading */
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        /* Style the "Predictions:" label */
+        .predictions-label {
+            font-weight: bold;
+            font-size: 1.8em;
+            margin-top: 20px;
+        }
+
+        .prediction p {
+            font-size: 1.5em;
+            margin: 5px 0;
+        }
+
+        /* Style the image */
+        img {
+            width: 50%;
+            height: auto;
+            margin-top: 20px;
+        }
+
+
     </style>
 </head>
 <body>
-    <input id="image-selector" type="file">
-    <button id="predict-button">Predict Image</button>
-    <p style="font-weight:bold">Predictions</p>
-    <p> Glioma Tumor: <span id="glioma_tumor_prediction"></span></p>
-    <p> Meningioma Tumor: <span id="meningioma_tumor_prediction"></span></p>
-    <p> No Tumor: <span id="no_tumor_prediction"></span></p>
-    <!-- <p> Pituitary Tumor: <span id="pituitary_tumor_prediction"></span></p> -->
-    <img id="selected-image" src=""/>
+    <div class="container">
+        <h1>Brain Tumor Image Prediction</h1>
+        <input id="image-selector" type="file">
+        <button id="predict-button">Predict Image</button>
+
+        <p class="predictions-label">Predictions:</p>
+        <div class="prediction">
+            <p> Glioma Tumor: <span id="glioma_tumor_prediction"></span></p>
+            <p> Meningioma Tumor: <span id="meningioma_tumor_prediction"></span></p>
+            <p> No Tumor: <span id="no_tumor_prediction"></span></p>
+            <!-- <p> Pituitary Tumor: <span id="pituitary_tumor_prediction"></span></p> -->
+        </div>
+        <img id="selected-image" src=""/>
+    </div>
+
 
     <!-- use jquery here for the web file upload -->
     <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
